[package]
name = "orbit"
version = "0.5.0"
authors = ["Alexis Fontaine <alexis.fontaine@outlook.com>"]
edition = "2021"
description = "3D model viewer"
readme = "readme.md"
repository = "https://github.com/alexisfontaine/orbit"
license = "GPL-3.0"

[features]
default = ["svg"]
canvas = [
	"web-sys/CanvasRenderingContext2d",
	"web-sys/HtmlCanvasElement",
	"web-sys/Path2d",
	"web-sys/ResizeObserver",
	"web-sys/ResizeObserverEntry",
	"web-sys/ResizeObserverSize",
]
svg = []

[lib]
path = "./sources/lib.rs"

[dependencies]
gloo-events = "0.1"
leptos = "0.1.0-beta"

[dependencies.web-sys]
version = "0.3"
features = [
	"CssStyleDeclaration",
	"Event",
	"KeyboardEvent",
	"PointerEvent",
]
